tests/syntax_error/bad_class_field_name.jou
class Foo:
    1: int  # Error: expected a method, a field or a union, got an integer
